# personal-site

./: .env  :w  Dockerfile  README.md  anthracite.cfg  compile.sh  docker-compose.yml  example.env  package-lock.json  package.json  shell.nix
.github/workflows/: main.yml
api/: Cargo.toml  shell.nix
api/assets/: style.css  test.html
api/src/: database.rs  main.rs
api/templates/: index.html  layout.html  route.html  route_symbol.html  routes.html
libseptastic/: Cargo.toml
libseptastic/src/: direction.rs  lib.rs  ridership.rs  route.rs  route_stop.rs  schedule_day.rs  stop.rs  stop_schedule.rs
nginx/: nginx.conf
public/: index.html  manifest.json
src/: App.css  App.tsx  Main.tsx  blog.filler.html  extra.filler.html  index.filler.html  index.tsx  on-rails.filler.html  projects.filler.html  structure.template.html
src/blogs/: doing-c-assignments-in-csharp.filler.html  fpga-fun.filler.html  fpga-fun.html  nws-postmortem-11-8-23.filler.html  nws-postmortem-11-8-23.html  side-project-10-20-23.filler.html  side-project-3-20-23.filler.html  side-project-3-27-23.filler.html  side-project-4-29-23.filler.html  side-project-7-12-23.filler.html  side-project-8-15-23.filler.html  side-project-8-8-23.filler.html  sig-septa.filler.html  spring-break-2023.filler.html
src/components/about-me/: AboutMe.tsx
src/components/blog-card/: BlogCard.css  BlogCard.tsx
src/components/blogs/: Blogs.css  Blogs.tsx
src/components/contact/: Contact.tsx
src/pages/: Blog.tsx  Home.css  Home.tsx  SingleBlog.tsx
src/types/: Blog.ts  InfoCardProps.ts  Job.ts  ProjectCardProps.ts
(+30 files in other folders)
